--- a/Edukator.PresentationLayer/Views/Category/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Category/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
 }
-
+<h2 class="card-header">Kategori Listesi</h2>
 <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 <div class="container">
     <br />
