--- a/Edukator.PresentationLayer/Views/Category/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Category/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
 }
-<h2 class="card-header">Kategori Listesi</h2>
+<h2 class="card-header container" >Kategori Listesi</h2>
 <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 <div class="container">
     <br />
@@ -21,5 +21,5 @@
             </tr>
         }
     </table>
-    <a href="#" class="btn btn-outline-primary">Yeni Kategori Ekle</a>
+    <a href="#" class="btn btn-outline-primary">Yeni Kategori Girişi</a>
 </div>
