--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialNavbar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialNavbar.cshtml
@@ -17,7 +17,7 @@
             <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                 <a href="#" class="dropdown-item">
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="~/dashmmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                        <img class="rounded-circle" src="~/dashmin/img/user3.png" alt="" style="width: 40px; height: 40px;">
                         <div class="ms-2">
                             <h6 class="fw-normal mb-0">Zeynep sana mesaj gönderdi</h6>
                             <small>15 dakika önce</small>
@@ -27,7 +27,7 @@
                 <hr class="dropdown-divider">
                 <a href="#" class="dropdown-item">
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="~/dashmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                        <img class="rounded-circle" src="~/dashmin/img/user4.png" alt="" style="width: 40px; height: 40px;">
                         <div class="ms-2">
                             <h6 class="fw-normal mb-0">Ahmet sana mesaj gönderdi</h6>
                             <small>25 dakika önce</small>
@@ -37,7 +37,7 @@
                 <hr class="dropdown-divider">
                 <a href="#" class="dropdown-item">
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="~/dashmmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                        <img class="rounded-circle" src="~/dashmin/img/user1.png" alt="" style="width: 40px; height: 40px;">
                         <div class="ms-2">
                             <h6 class="fw-normal mb-0">Hakan sana mesaj gönderdi</h6>
                             <small>2 saat önce</small>
@@ -74,7 +74,7 @@
         </div>
         <div class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                <img class="rounded-circle me-lg-2" src="~/dashmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                <img class="rounded-circle me-lg-2" src="~/dashmin/img/erhan (2).jpeg" alt="" style="width: 40px; height: 40px;">
                 <span class="d-none d-lg-inline-flex">Erhan Gündüz</span>
             </a>
             <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
