--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -5,7 +5,7 @@
         </a>
         <div class="d-flex align-items-center ms-4 mb-4">
             <div class="position-relative">
-                <img class="rounded-circle" src="~/dashmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                <img class="rounded-circle" src="~/dashmin/img/erhan (2).jpeg" alt="" style="width: 40px; height: 40px;">
                 <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
             </div>
             <div class="ms-3">
@@ -16,18 +16,18 @@
         <div class="navbar-nav w-100">
             <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
             <div class="nav-item">
-                <a href="/Category/Index" class="nav-link" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Kategoriler</a>
+                <a href="/Category/Index" class="nav-link"><i class="fa fa-list-ol me-2"></i>Kategoriler</a>
                
             </div>
-            <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Kurslar</a>
-            <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Öğrenciler</a>
-            <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>İstatistikler</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Mesajlar</a>
+            <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-chalkboard me-2"></i>Kurslar</a>
+            <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
+            <a href="table.html" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
+            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Raporlar</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Roller</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-diagnoses me-2"></i>Ayarlar</a>
-            <a href="/SocialMedia/Index" class="nav-item nav-link"><i class="fa fa-comments me-2"></i>Sosyal Medya</a>
+            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-receipt me-2"></i>Raporlar</a>
+            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
+            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
+            <a href="/SocialMedia/Index" class="nav-item nav-link"><i class="fa fa-network-wired me-2"></i>Sosyal Medya</a>
        
         </div>
     </nav>
