--- a/Edukator.PresentationLayer/Views/Course/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Course/Index.cshtml
@@ -3,33 +3,39 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h2 class="card-header container">Kurs Listesi</h2>
-<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-<div class="container">
-<table class="table table-striped container">
 
-    <tr>
-        <th>#</th>
-        <th>Başlık</th>
-        <th>Fiyat</th>
-        <th>Kategori</th>
-        <th>Sil</th>
-        <th>Güncelle</th>
-    </tr>
 
-    @foreach(var item in Model)
-    {
-        <tr>
-            <td>@item.CourseID</td>
-            <td>@item.Title</td>
-            <td>@item.Price</td>
-            <td>@item.Category</td>
-            <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-outline-success">Güncelle</a></td>
-        </tr>
-    }
-  
-</table>
-<a href="#" class="btn btn-outline-primary">Yeni Kurs Girişi </a>
+<div class="col-sm-12 col-xl-12">
+    <div class="bg-light rounded h-100 p-4">
+        <h6 class="mb-4">Kurslar</h6>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Kurs Adı</th>
+                    <th scope="col">Fiyat</th>
+                    <th scope="col">Kategori</th>
+                    <th scope="col">Sil</th>
+                    <th scope="col">Güncelle</th>
 
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <th scope="row">@item.CourseID</th>
+                        <td>@item.Title</td>
+                        <td>@item.Price</td>
+                        <td>@item.CategoryID</td>
+                        <td><a href="/Course/DeleteCourse/@item.CourseID" class="btn btn-outline-danger">Sil</a></td>
+                        <td><a href="/Course/UpdateCourse/@item.CourseID" class="btn btn-outline-success">Güncelle</a></td>
+
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <a href="/Course/AddCourse" class="btn btn-primary">Yeni Kurs Girişi</a>
+    </div>
 </div>
