--- a/Edukator.PresentationLayer/Views/SocialMedia/UpdateSocialMedia.cshtml
+++ b/Edukator.PresentationLayer/Views/SocialMedia/UpdateSocialMedia.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="bg-light rounded h-100 p-4 col-xl-12">
-    <h6 class="mb-4">Yeni Sosyal Medya Girişi</h6>
+    <h6 class="mb-4">Sosyal Medya Güncelleme Sayfası</h6>
     <form method="post">
         <input type="hidden" asp-for="SocialMediaID" />
         <div class="mb-3">
