--- a/Edukator.PresentationLayer/Views/AdminLayout/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/Index.cshtml
@@ -22,8 +22,8 @@
     
             <!-- Blank Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="row vh-100 bg-light rounded justify-content-center mx-0">
-                    <div class="text">
+                <div class="row vh-100 bg-light rounded ">
+                    <div class="text-left">
                         @RenderBody()
                     </div>
                 </div>
