--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -19,7 +19,7 @@
             <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-chalkboard me-2"></i>Kurslar</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
             <a href="table.html" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
+            <a href="/Contact/Index" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-receipt me-2"></i>Raporlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
