new controllers and views are added

--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -20,10 +20,13 @@
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
             <a href="table.html" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
             <a href="/Contact/Index" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
+            <a href="/Subscriber/Index" class="nav-item nav-link"><i class="fa fa-mail-bulk me-2"></i>Aboneler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-receipt me-2"></i>Raporlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
+            <a href="/ContactInfo/Index" class="nav-item nav-link"><i class="fa fa-phone-alt me-2"></i>İletişim Bilgileri</a>
+            <a href="/ContactInfo/Index" class="nav-item nav-link"><i class="fa fa-map me-2"></i>Harita</a>
             <a href="/SocialMedia/Index" class="nav-item nav-link"><i class="fa fa-network-wired me-2"></i>Sosyal Medya</a>
        
         </div>
