--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -18,7 +18,7 @@
             <a href="/Category/Index" class="nav-link"><i class="fa fa-list-ol me-2"></i>Kategoriler</a>
             <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-chalkboard me-2"></i>Kurslar</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
-            <a href="table.html" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
+            <a href="/Statistics/Index" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
             <a href="/Contact/Index" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
             <a href="/Subscriber/Index" class="nav-item nav-link"><i class="fa fa-mail-bulk me-2"></i>Aboneler</a>
             <a href="/Reference/Index" class="nav-item nav-link"><i class="fa fa-user-circle me-2"></i>Referanslar</a>
