--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialHead.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialHead.cshtml
@@ -1,6 +1,6 @@
 ﻿<head>
     <meta charset="utf-8">
-    <title>DASHMIN - Bootstrap Admin Template</title>
+    <title>Edukator - Admin Paneli</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
