home index updated and viewcomponents are added

--- a/Edukator.PresentationLayer/Views/Register/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Register/Index.cshtml
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<h1>Kurslarımıza Kaydolun</h1>
 					<p>
-						Alanında uzman eğitmenlerin hazırladığı yazılımdan teknolojiye, grafik tasarımdan animasyona, İngilizce'den mateamatiğe kadar onlarca farklı kategoride en güncel içeriklere hazırız.
+						Alanında uzman eğitmenlerin hazırladığı yazılımdan teknolojiye, grafik tasarımdan animasyona, İngilizce'den matematiğe kadar onlarca farklı kategoride en güncel içeriklere hazırız.
 					</p>
 					<div class="content3">
 						<ul>
