--- a/Edukator.PresentationLayer/Views/Shared/Components/_AboutPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_AboutPartial/Default.cshtml
@@ -1,13 +1,18 @@
-﻿<section class="w3l-homeblock1" id="about">
+﻿@model List<Edukator.EntityLayer.Concrete.About>
+@foreach(var item in Model) 
+                 {
+<section class="w3l-homeblock1" id="about">
     <div class="midd-w3 py-5">
         <div class="container py-lg-5 py-md-3">
             <div class="row cwp23-grids align-items-center">
+                 
                 <div class="col-lg-6">
                     <h5 class="title-subw3hny">Hakkımızda</h5>
-                    <h3 class="title-w3l">Neredeyse her konuyla İlgili kursları <span class="inn-text">Keşfet</span></h3>
+                   
+                    <h3 class="title-w3l">@item.Title1 <span class="inn-text">@item.Title2</span></h3>
                     <h6 class="mt-md-4 mt-md-5 mt-4">
-                        Kişisel gelişiminiz ve kariyeriniz için
-                        <br>kurslarla kendinizi geliştirin
+                        @item.Description1
+                        <br>@item.Description2
                     </h6>
                     <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4">Kursları Gör</a>
                 </div>
@@ -16,46 +21,48 @@
                         <div class="column col-6">
                             <div class="column-w3-img position-relative">
                                 <a href="#">
-                                    <img src="~/Edukator-Starter/assets/images/1.jpg" alt=""
+                                    <img src="@item.Image1" alt=""
                                          class="radius-image img-fluid">
                                 </a>
                                 <div class="edu-info">
-                                    <h4 class="edu-heading-title"><a href="#">Kişisel Gelişim</a></h4>
+                                    <h4 class="edu-heading-title"><a href="#">@item.ImageText1</a></h4>
                                 </div>
                             </div>
                             <div class="column-w3-img position-relative mt-4">
                                 <a href="#">
-                                    <img src="~/Edukator-Starter/assets/images/b8.jpg" alt=""
+                                    <img src="@item.Image2" alt=""
                                          class="radius-image img-fluid">
                                 </a>
                                 <div class="edu-info">
-                                    <h4 class="edu-heading-title"><a href="#">İş Dünyası</a></h4>
+                                    <h4 class="edu-heading-title"><a href="#">@item.ImageText2</a></h4>
                                 </div>
                             </div>
                         </div>
                         <div class="column col-6">
                             <div class="column-w3-img position-relative">
                                 <a href="#">
-                                    <img src="~/Edukator-Starter/assets/images/b3.jpg" alt=""
+                                    <img src="@item.Image3" alt=""
                                          class="radius-image img-fluid">
                                 </a>
                                 <div class="edu-info">
-                                    <h4 class="edu-heading-title"><a href="#">Girişimcilik</a></h4>
+                                    <h4 class="edu-heading-title"><a href="#">@item.ImageText3</a></h4>
                                 </div>
                             </div>
                             <div class="column-w3-img position-relative mt-4">
                                 <a href="#">
-                                    <img src="~/Edukator-Starter/assets/images/2.jpg" alt=""
+                                    <img src="@item.Image4" alt=""
                                          class="radius-image img-fluid">
                                 </a>
                                 <div class="edu-info">
-                                    <h4 class="edu-heading-title"><a href="#">Fotoğrafçılık</a></h4>
+                                    <h4 class="edu-heading-title"><a href="#">@item.ImageText4</a></h4>
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+}
