--- a/Edukator.PresentationLayer/Views/Home/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿
-
 @{
     Layout = null;
 }
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
 
@@ -22,211 +17,27 @@ Author URL: http://w3layouts.com
   
     <!--/about-section -->
     @await Component.InvokeAsync("_AboutPartial")
-    <!--//about-section -->
+ 
     <!--/home-stats-->
     @await Component.InvokeAsync("_StatisticsPartial")
-    <!--//home-stats-->
+  
     <!--/popular-Courses-->
     @await Component.InvokeAsync("_CoursePartial")
-    <!--//popular-Courses-->
+   
     <!--/testimonials-->
     <section class="w3l-testimonials" id="testimonials">
         <!-- /grids -->
        @await Component.InvokeAsync("_ReferencePartial")
-        <!-- //grids -->
+    
     </section>
-    <!-- //testimonials -->
-    <!--/subscribe-->
-    <section class="w3l-project" id="subscribe">
-        <div class="container-fluid mx-lg-0">
-            <div class="row">
-                <div class="col-lg-6 bottom-info">
-                    <div class="project-header-section text-left">
-                        <h5 class="title-subw3hny text-left mb-1">Bize Katılın</h5>
-                        <h3 class="title-w3l">
-                            Ücretsiz bir şekilde mailinizle kaydolarak gelişmelerden <span class="inn-text"> haberdar olun!</span>
-                        </h3>
-                        <p class="mt-3 pr-lg-5">Abone olun ve en son gelişmelerden ve tekliflerden ilk sizin haberiniz olsun!</p>
+  
 
-                        <form action="#" class="subscribe mt-5" method="post">
-                            <input type="email" name="email" placeholder="E-Mail Adresiniz" required="">
-                            <button class="btn btn-style btn-primary">Abone Ol</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-6 subcribe-img">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--//subscribe-->
+    @await Html.PartialAsync("~/Views/Home/SubscribePartial.cshtml")
+ 
     <!--/footer-->
-    <footer class="w3l-footer-22 position-relative">
-        <div class="footer-sub py-5">
-            <div class="container py-md-5">
-                <div class="row sub-columns">
-                    <div class="col-lg-4 col-md-6 sub-one-left ab-right-cont pr-lg-5 mb-md-0  mb-4">
-                        <h6>Hakkımızda </h6>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet.
-                            Lorem ipsum dolor sit amet elit.voluptatem accusantium
-                            doloremque.
-                        </p>
-                        <div class="columns-2">
-                            <ul class="social">
-                                <li>
-                                    <a href="#facebook"><span class="fab fa-facebook-f" aria-hidden="true"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#linkedin"><span class="fab fa-linkedin-in" aria-hidden="true"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#twitter"><span class="fab fa-twitter" aria-hidden="true"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#google"><span class="fab fa-google-plus-g" aria-hidden="true"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#pinterest"><span class="fab fa-pinterest-p" aria-hidden="true"></span></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 sub-two-right pl-lg-5">
-                        <h6>Yararlı Linkler</h6>
-                        <ul>
-                            <li>
-                                <a href="index.html"><span class="fas fa-chevron-right mr-2"></span>Ana Sayfa</a>
-                            </li>
-                            <li>
-                                <a href="about.html"><span class="fas fa-chevron-right mr-2"></span>Hakkımızda</a>
-                            </li>
-                            <li><a href="courses.html"><span class="fas fa-chevron-right mr-2"></span>Kurslar</a></li>
-                            <li><a href="contact.html"><span class="fas fa-chevron-right mr-2"></span>İletişim</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-md-6 sub-two-right pl-lg-5 mt-md-0 mt-4">
-                        <h6>Yardım & Destek</h6>
-                        <ul>
-                            <li>
-                                <a href="#live">
-                                    <span class="fas fa-chevron-right mr-2"></span>Canlı Sohbet
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#faq"><span class="fas fa-chevron-right mr-2"></span>SSS</a>
-                            </li>
-                            <li>
-                                <a href="#support"><span class="fas fa-chevron-right mr-2"></span>Destek</a>
-                            </li>
-                            <li>
-                                <a href="#terms">
-                                    <span class="fas fa-chevron-right mr-2"></span>Hizmet Şartları
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-md-6 sub-two-right mt-md-0 mt-4">
-                        <h6>Araştırma</h6>
-                        <ul>
-                            <li>
-                                <a href="#"><span class="fas fa-chevron-right mr-2"></span> Akademik Bölümler</a>
-                            </li>
-                            <li>
-                                <a href="#"><span class="fas fa-chevron-right mr-2"></span> Öğrenci Araştırmaları</a>
-                            </li>
-                            <li>
-                                <a href="#"><span class="fas fa-chevron-right mr-2"></span> Merkezler & Enstitüler</a>
-                            </li>
-                            <li><a href="#"><span class="fas fa-chevron-right mr-2"></span> Araştırma Hizmetleri</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-     
-        <!-- copyright -->
-        <div class="copyright-footer text-center">
-            <div class="container">
-                <div class="columns">
-                    <p>
-                        © @DateTime.Now.Year Edukator. Tüm Hakları Saklıdır. Design by<a href="https://w3layouts.com/" target="_blank">
-                            W3layouts
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!-- //copyright -->
-    </footer>
-    <!-- //footer -->
-    <!-- Js scripts -->
-    <!-- move top -->
-    <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fas fa-level-up-alt" aria-hidden="true"></span>
-    </button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
+    @await Component.InvokeAsync("_FooterPartial")
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("movetop").style.display = "block";
-            } else {
-                document.getElementById("movetop").style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <!-- //move top -->
-    <!-- Template JavaScript -->
-    <script src="~/Edukator-Starter/assets/js/jquery-3.3.1.min.js"></script>
-    <script src="~/Edukator-Starter/assets/js/theme-change.js"></script>
-    <!-- disable body scroll which navbar is in active -->
-    <script>
-        $(function () {
-            $('.navbar-toggler').click(function () {
-                $('body').toggleClass('noscroll');
-            })
-        });
-    </script>
-    <!-- disable body scroll which navbar is in active -->
-    <!--/MENU-JS-->
-    <script>
-        $(window).on("scroll", function () {
-            var scroll = $(window).scrollTop();
-
-            if (scroll >= 80) {
-                $("#site-header").addClass("nav-fixed");
-            } else {
-                $("#site-header").removeClass("nav-fixed");
-            }
-        });
-
-        //Main navigation Active Class Add Remove
-        $(".navbar-toggler").on("click", function () {
-            $("header").toggleClass("active");
-        });
-        $(document).on("ready", function () {
-            if ($(window).width() > 991) {
-                $("header").removeClass("active");
-            }
-            $(window).on("resize", function () {
-                if ($(window).width() > 991) {
-                    $("header").removeClass("active");
-                }
-            });
-        });
-    </script>
-    <!--//MENU-JS-->
-    <script src="~/Edukator-Starter/assets/js/bootstrap.min.js"></script>
+    @await Component.InvokeAsync("_ScriptPartial")
 
 </body>
 
