--- a/Edukator.PresentationLayer/Views/SocialMedia/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/SocialMedia/Index.cshtml
@@ -27,7 +27,7 @@
                     <td>@item.SocialMediaName</td>
                     <td><a href="/SocialMedia/DeleteSocialMedia/@item.SocialMediaID" class="btn btn-outline-danger">Sil</a></td>
                         <td><a href="/SocialMedia/UpdateSocialMedia/@item.SocialMediaID" class="btn btn-outline-success">Güncelle</a></td>
-                    <td><a href="#" class="btn btn-outline-info">Siteye Git</a></td>
+                    <td><a href="@item.SocialMediaURL" target="_blank" class="btn btn-outline-info">Siteye Git</a></td>
                   
                 </tr>
                 }
