--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="navbar-nav w-100">
-            <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+            <a href="/Dashboard/Index" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
             <a href="/Category/Index" class="nav-link"><i class="fa fa-list-ol me-2"></i>Kategoriler</a>
             <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-chalkboard me-2"></i>Kurslar</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
