courses and contact pages finished

--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialNavbar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialNavbar.cshtml
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
+﻿
+<nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
     <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
         <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
     </a>
@@ -45,7 +46,7 @@
                     </div>
                 </a>
                 <hr class="dropdown-divider">
-                <a href="#" class="dropdown-item text-center">Tüm mesajları gör</a>
+                <a href="/Contact/Index" class="dropdown-item text-center">Tüm mesajları gör</a>
             </div>
         </div>
         <div class="nav-item dropdown">
