--- a/Edukator.PresentationLayer/Views/Category/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Category/Index.cshtml
@@ -26,9 +26,9 @@
                     <tr>
                         <th scope="row">@item.CategoryID</th>
                         <td>@item.CategoryName</td>
-                        <td><a href="/Category/DeleteCategory/@item.CategoryID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/Category/UpdateCategory/@item.CategoryID" class="btn btn-outline-success">Güncelle</a></td>
-                        <td><a href="/Category/GetCourse/@item.CategoryID" class="btn btn-outline-info">Kurslar</a></td>
+                        <td><a href="/Category/DeleteCategory/@item.CategoryID" class="btn btn-outline-danger"><i class="fa fa-trash me-2"></i>Sil</a></td>
+                        <td><a href="/Category/UpdateCategory/@item.CategoryID" class="btn btn-outline-success"><i class="fa fa-pencil-alt me-2"></i>Güncelle</a></td>
+                        <td><a href="/Category/GetCourse/@item.CategoryID" class="btn btn-outline-info"><i class="fa fa-chalkboard me-2"></i>Kurslar</a></td>
                       
 
                     </tr>
