--- a/Edukator.PresentationLayer/Views/ContactInfo/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/ContactInfo/Index.cshtml
@@ -36,8 +36,8 @@
                         <td>@item.Mail2</td>
                         <td>@item.Phone1</td>
                         <td>@item.Phone2</td>
-                        <td><a href="/ContactInfo/DeleteContactInfo/@item.ContactInfoID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/ContactInfo/UpdateContactInfo/@item.ContactInfoID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="/ContactInfo/DeleteContactInfo/@item.ContactInfoID" class="btn btn-outline-danger"><i class="fa fa-trash "></i>Sil</a></td>
+                        <td><a href="/ContactInfo/UpdateContactInfo/@item.ContactInfoID" class="btn btn-outline-success"><i class="fa fa-pencil-alt "></i>Güncelle</a></td>
 
                      
 
