--- a/Edukator.PresentationLayer/Views/Course/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Course/Index.cshtml
@@ -28,8 +28,8 @@
                         <td>@item.Title</td>
                         <td>@item.Price ₺</td>
                         <td>@item.Category.CategoryName</td>
-                        <td><a href="/Course/DeleteCourse/@item.CourseID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/Course/UpdateCourse/@item.CourseID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="/Course/DeleteCourse/@item.CourseID" class="btn btn-outline-danger"><i class="fa fa-trash me-2"></i>Sil</a></td>
+                        <td><a href="/Course/UpdateCourse/@item.CourseID" class="btn btn-outline-success"><i class="fa fa-pencil-alt me-2"></i>Güncelle</a></td>
 
 
                     </tr>
