--- a/Edukator.PresentationLayer/Views/Maps/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Maps/Index.cshtml
@@ -25,8 +25,8 @@
                     <tr>
                         <th scope="row">@item.MapID</th>
                         <td><a href="@item.LocationURL" target="_blank">Konum Linki</a> </td>
-                        <td><a href="/Maps/DeleteMap/@item.MapID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/Maps/UpdateMap/@item.MapID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="/Maps/DeleteMap/@item.MapID" class="btn btn-outline-danger"><i class="fa fa-trash "></i>Sil</a></td>
+                        <td><a href="/Maps/UpdateMap/@item.MapID" class="btn btn-outline-success"><i class="fa fa-pencil-alt "></i>Güncelle</a></td>
 
 
 
