--- a/Edukator.PresentationLayer/Views/Reference/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Reference/Index.cshtml
@@ -12,7 +12,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Ad Soyad</th>
-                    <th scope="col">Meslek</th>
+                  
                     <th scope="col">Yorum</th>
                     <th scope="col">Güncelle</th>
                     <th scope="col">Sil</th>
@@ -26,10 +26,10 @@
                     <tr>
                         <th scope="row">@item.ReferenceID</th>
                         <td>@item.NameSurname</td>
-                        <td>@item.Job</td>
+                   
                         <td>@item.Comment</td>
-                        <td><a href="/Reference/DeleteReference/@item.ReferenceID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/Reference/UpdateReference/@item.ReferenceID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="/Reference/UpdateReference/@item.ReferenceID" class="btn btn-outline-success"><i class="fa fa-pencil-alt "></i>Güncelle</a></td>
+                        <td><a href="/Reference/DeleteReference/@item.ReferenceID" class="btn btn-outline-danger"><i class="fa fa-trash "></i>Sil</a></td>
 
 
 
