--- a/Edukator.PresentationLayer/Views/Shared/Components/_DashboardLast4MessagePartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_DashboardLast4MessagePartial/Default.cshtml
@@ -4,11 +4,11 @@
     <div class="h-100 bg-light rounded p-4">
         <div class="d-flex align-items-center justify-content-between mb-2">
             <h6 class="mb-0">Son Mesajlar</h6>
-            <a href="">Tümünü Gör</a>
+            <a href="/Contact/Index">Tümünü Gör</a>
         </div>
         @foreach(var item in Model){
         <div class="d-flex align-items-center border-bottom py-3">
-            <img class="rounded-circle flex-shrink-0" src="~/dashmin/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <img class="rounded-circle flex-shrink-0" src="~/dashmin/img/User_Icon.png" alt="" style="width: 40px; height: 40px;">
             <div class="w-100 ms-3">
                 <div class="d-flex w-100 justify-content-between">
                     <h6 class="mb-0">@item.NameSurname</h6>
