--- a/Edukator.PresentationLayer/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/Home/Index">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Hakkımızda</a>
+                        <a class="nav-link" href="/About/Index">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="courses.html">Kurslar</a>
+                        <a class="nav-link" href="/Course/Courses">Kurslar</a>
                     </li>
                     <li class="nav-item mr-lg-1">
-                        <a class="nav-link" href="contact.html">İletişim</a>
+                        <a class="nav-link" href="/Contact/Contacts">İletişim</a>
                     </li>
                     <!--/search-right-->
                     <li class="header-search mr-lg-2 mt-lg-0 mt-4 position-relative">
