--- a/Edukator.PresentationLayer/Views/Subscriber/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Subscriber/Index.cshtml
@@ -24,8 +24,8 @@
                     <tr>
                         <th scope="row">@item.SubscriberID</th>
                         <td>@item.Mail</td>
-                        <td><a href="/Subscriber/DeleteSubscriber/@item.SubscriberID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/Subscriber/UpdateSubscriber/@item.SubscriberID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="/Subscriber/DeleteSubscriber/@item.SubscriberID" class="btn btn-outline-danger"><i class="fa fa-trash me-2"></i>Sil</a></td>
+                        <td><a href="/Subscriber/UpdateSubscriber/@item.SubscriberID" class="btn btn-outline-success"><i class="fa fa-pencil-alt me-2"></i>Güncelle</a></td>
 
 
 
