--- a/Edukator.PresentationLayer/Views/Contact/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Contact/Index.cshtml
@@ -25,9 +25,9 @@
                         <th scope="row">@item.ContactID</th>
                         <td>@item.NameSurname</td>
                         <td>@item.Subject</td>
-                        <td><a href="/Contact/DeleteContact/@item.ContactID" class="btn btn-outline-danger">Sil</a></td>
-                       
-                        <td><a href="/Contact/GetMessage/@item.ContactID" class="btn btn-outline-info">Mesajı Aç</a></td>
+                        <td><a href="/Contact/DeleteContact/@item.ContactID" class="btn btn-outline-danger"><i class="fa fa-trash me-2"></i>Sil</a></td>
+
+                        <td><a href="/Contact/GetMessage/@item.ContactID" class="btn btn-outline-info"><i class="fa fa-comment me-2"></i>Mesajı Aç</a></td>
 
                     </tr>
                 }
