--- a/Edukator.PresentationLayer/Views/Shared/Components/_DashboardLast5CoursePartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_DashboardLast5CoursePartial/Default.cshtml
@@ -4,7 +4,7 @@
     <div class="h-100 bg-light rounded p-4">
         <div class="d-flex align-items-center justify-content-between mb-4">
             <h6 class="mb-0">Son Kurslar</h6>
-            <a href="">Tümünü Gör</a>
+            <a href="/Course/Index">Tümünü Gör</a>
         </div>
         <div class="d-flex mb-2">
             <input class="form-control bg-transparent" type="text" placeholder="Kurs Adı...">
