--- a/Edukator.PresentationLayer/Views/Shared/Components/_DashboardRecentPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_DashboardRecentPartial/Default.cshtml
@@ -4,7 +4,7 @@
     <div class="bg-light text-center rounded p-4">
         <div class="d-flex align-items-center justify-content-between mb-4">
             <h6 class="mb-0">Son Kurs Kayıtları</h6>
-            <a href="">Tümünü Göster</a>
+            <a href="/Course/Index">Tümünü Göster</a>
         </div>
         <div class="table-responsive">
             <table class="table text-start align-middle table-bordered table-hover mb-0">
