--- a/Edukator.PresentationLayer/Views/SocialMedia/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/SocialMedia/Index.cshtml
@@ -25,9 +25,11 @@
                 <tr>
                     <th scope="row">@item.SocialMediaID</th>
                     <td>@item.SocialMediaName</td>
-                    <td><a href="/SocialMedia/DeleteSocialMedia/@item.SocialMediaID" class="btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/SocialMedia/UpdateSocialMedia/@item.SocialMediaID" class="btn btn-outline-success">Güncelle</a></td>
-                    <td><a href="@item.SocialMediaURL" target="_blank" class="btn btn-outline-info">Siteye Git</a></td>
+                        <td><a href="/SocialMedia/DeleteSocialMedia/@item.SocialMediaID" class="btn btn-outline-danger"><i class="fa fa-trash "></i>Sil</a></td>
+                        <td>
+                            <a href="/SocialMedia/UpdateSocialMedia/@item.SocialMediaID" class="btn btn-outline-success"><i class="fa fa-pencil-alt "></i>Güncelle</a>
+                        </td>
+                        <td><a href="@item.SocialMediaURL" target="_blank" class="btn btn-outline-info"><i class="fa fa-laptop "></i>Siteye Git</a></td>
                   
                 </tr>
                 }
