--- a/Edukator.PresentationLayer/Views/Contact/Contacts.cshtml
+++ b/Edukator.PresentationLayer/Views/Contact/Contacts.cshtml
@@ -44,9 +44,4 @@
     <!-- //contacts-5-grid -->
 </div>
 
-<div class="contacts-sub-5">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12239.34542896242!2d32.81258568677484!3d39.922678170807956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d34f3ac97e815d%3A0xfd4a4110ab5e5636!2sEmek%2C%2006490%20%C3%87ankaya%2FAnkara!5e0!3m2!1str!2str!4v1684189959328!5m2!1str!2str"
-
-    
-            style="border:0" allowfullscreen></iframe>
-</div>
+@await Component.InvokeAsync("_MapPartial")
