--- a/Edukator.PresentationLayer/Views/Shared/Components/_AboutPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_AboutPartial/Default.cshtml
@@ -14,7 +14,7 @@
                         @item.Description1
                         <br>@item.Description2
                     </h6>
-                    <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4">Kursları Gör</a>
+                    <a href="/Course/Courses#courses" class="btn btn-style btn-primary mt-lg-5 mt-4">Kursları Gör</a>
                 </div>
                 <div class="HomeAboutImages col-lg-6 mt-lg-0 mt-5 pl-lg-5">
                     <div class="cwp23-text-cols row">
