--- a/Edukator.PresentationLayer/Views/Shared/Components/_FeaturePartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_FeaturePartial/Default.cshtml
@@ -18,7 +18,7 @@
                     <h4>@item.Title1</h4>
                     <h3>@item.Title2</h3>
                    
-                    <a href="about.html" class="btn btn-style transparant-btn mt-md-5 mt-4">Daha Fazla Bilgi</a>
+                    <a href="/About/Index" class="btn btn-style transparant-btn mt-md-5 mt-4">Daha Fazla Bilgi</a>
                 </div>
             </div>
         </div>
