--- a/Edukator.PresentationLayer/Views/Shared/Components/_HeadPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_HeadPartial/Default.cshtml
@@ -2,7 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Edukator | Ana Sayfa</title>
+    <title>Edukator | Online Kurslar </title>
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Template CSS -->
