--- a/Edukator.PresentationLayer/Views/Login/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Login/Index.cshtml
@@ -3,7 +3,98 @@
     Layout = null;
 }
 
-<link href="~/dashmin/css/bootstrap.min.css" rel="stylesheet" />
+<!--A Design by W3layouts
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Edukator Yeni Kayıt Sayfası</title>
+	<!-- custom-theme -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Course Register Form Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+	<script type="application/x-javascript">
+		addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+			   function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!-- //custom-theme -->
+	<!-- css files -->
+	<link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=devanagari,latin-ext" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+	<link href="~/web/css/style.css" type="text/css" rel="stylesheet" media="all">
+	<!-- //css files -->
+
+	<link rel="stylesheet" href="~/web/css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
+
+</head>
+<!-- body starts -->
+<body>
+	<!-- section -->
+	<section class="register">
+		<div class="register-full">
+			<div class="register-left">
+				<div class="register">
+					<div class="logo">
+						<a href="#"><span class="fa fa-graduation-cap" aria-hidden="true"></span></a>
+					</div>
+					<h1>Kurslara Giriş Yapın</h1>
+					<p>
+						Alanında uzman eğitmenlerin hazırladığı yazılımdan teknolojiye, grafik tasarımdan animasyona, İngilizce'den matematiğe kadar onlarca farklı kategoride en güncel içeriklere hazırız.
+					</p>
+					<div class="content3">
+						<ul>
+						<li><a class="" href="/Register/Index"> Kayıt Olun</a></li>
+						<li><a class="read" href="/Home/Index"> Kursları Gör</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="register-right">
+				<div class="register-in">
+					<h2><span class="fa fa-user"></span>Hemen Giriş Yapın</h2>
+					<div class="register-form">
+						<form method="post">
+							<div class="fields-grid">
+
+								<div class="styled-input">
+									<input type="text" asp-for="Username" required="">
+									<label>Kullanıcı Adınız</label>
+									<span></span>
+								</div>
+								<div class="styled-input">
+									<input type="password" asp-for="Password" required="">
+									<label>Şifreniz</label>
+									<span></span>
+								</div>
+								
+								<div class="clear"> </div>
+								
+							</div>
+
+							<div style="color:red" asp-validation-summary="ModelOnly"></div>
+
+							<input type="submit" value="Giriş Yap">
+						</form>
+					</div>
+				</div>
+				<div class="clear"> </div>
+			</div>
+			<div class="clear"> </div>
+		</div>
+		<!-- copyright -->
+		<p class="agile-copyright">© @DateTime.Now.Year Edukator Kayıt Formu. Tüm Hakları Saklıdır | Design by <a href="https://w3layouts.com/" target="_blank">W3layouts</a></p>
+		<!-- //copyright -->
+	</section>
+	<!-- //section -->
+</body>
+<!-- //body ends -->
+</html>
+
+@*<link href="~/dashmin/css/bootstrap.min.css" rel="stylesheet" />
 <br /><br />
 <h3 class="container">Giriş Paneli </h3>
 <div class="container">
@@ -22,4 +113,4 @@
 
 
 
-</div>
+</div>*@
