--- a/Edukator.PresentationLayer/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -32,6 +32,12 @@
                     <li class="nav-item mr-lg-1">
                         <a class="nav-link" href="/Contact/Contacts">İletişim</a>
                     </li>
+                    <li class="nav-item mr-lg-1">
+                        <a class="nav-link" href="/Login/Index">Giriş Yap</a>
+                    </li>
+                    <li class="nav-item mr-lg-1">
+                        <a class="nav-link" href="/Register/Index">Kayıt Ol</a>
+                    </li>
                     <!--/search-right-->
                     <li class="header-search mr-lg-2 mt-lg-0 mt-4 position-relative">
                         <div class="search-right">
