The end of Lesson 19

--- a/Edukator.PresentationLayer/Views/About/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/About/Index.cshtml
@@ -120,8 +120,7 @@
                               <span>  Katılmak İster misiniz?</span>
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet. Lorem ipsum
-                                dolor sit amet elit.
+                               Siz de uzman kadromuza katılmak ister misiniz? Eğer siz de sitemizde online kurs vermek isterseniz Bizimle iletişime geçebilirsiniz.
                             </p>
                         </div>
                     </div>
