end of lesson 20

--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -17,14 +17,15 @@
             <a href="/Dashboard/Index" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
             <a href="/Category/Index" class="nav-link"><i class="fa fa-list-ol me-2"></i>Kategoriler</a>
             <a href="/Course/Index" class="nav-item nav-link"><i class="fa fa-chalkboard me-2"></i>Kurslar</a>
-            <a href="form.html" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
+            <a href="/User/Index" class="nav-item nav-link"><i class="fa fa-user-friends me-2"></i>Öğrenciler</a>
             <a href="/Statistics/Index" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>İstatistikler</a>
             <a href="/Contact/Index" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Mesajlar</a>
             <a href="/Subscriber/Index" class="nav-item nav-link"><i class="fa fa-mail-bulk me-2"></i>Aboneler</a>
             <a href="/Reference/Index" class="nav-item nav-link"><i class="fa fa-user-circle me-2"></i>Referanslar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-receipt me-2"></i>Raporlar</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
+            <a href="/Role/Index" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
+            <a href="RoleAssign/Index" class="nav-item nav-link"><i class="fa fa-user-cog me-2"></i>Rol Atama</a>>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
             <a href="/ContactInfo/Index" class="nav-item nav-link"><i class="fa fa-phone-alt me-2"></i>İletişim Bilgileri</a>
             <a href="/Maps/Index" class="nav-item nav-link"><i class="fa fa-map me-2"></i>Harita</a>
