--- a/Edukator.PresentationLayer/Areas/Member/Views/MemberLayout/MemberSidebarPartial.cshtml
+++ b/Edukator.PresentationLayer/Areas/Member/Views/MemberLayout/MemberSidebarPartial.cshtml
@@ -9,7 +9,7 @@
                 <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
             </div>
             <div class="ms-3">
-                <h6 class="mb-0">Erhan Gündüz</h6>
+                <h6 class="mb-0">@ViewBag.name</h6>
                 <span>Öğrenci</span>
             </div>
         </div>
