--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -26,7 +26,7 @@
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-receipt me-2"></i>Raporlar</a>
             <a href="/Role/Index" class="nav-item nav-link"><i class="fa fa-user-edit me-2"></i>Roller</a>
             <a href="RoleAssign/Index" class="nav-item nav-link"><i class="fa fa-user-cog me-2"></i>Rol Atama</a>>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
+            <a href="/Settings/Index" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
             <a href="/ContactInfo/Index" class="nav-item nav-link"><i class="fa fa-phone-alt me-2"></i>İletişim Bilgileri</a>
             <a href="/Maps/Index" class="nav-item nav-link"><i class="fa fa-map me-2"></i>Harita</a>
             <a href="/SocialMedia/Index" class="nav-item nav-link"><i class="fa fa-network-wired me-2"></i>Sosyal Medya</a>
