--- a/Edukator.PresentationLayer/Views/RoleAssign/AssignRole.cshtml
+++ b/Edukator.PresentationLayer/Views/RoleAssign/AssignRole.cshtml
@@ -1,8 +1,23 @@
-﻿
+﻿@model List<RoleAssignViewModel>
 @{
     ViewData["Title"] = "AssignRole";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h1>AssignRole</h1>
+<h1>Kullanıcı Rol Atama Sayfası</h1>
 
+<form method="post">
+    @for(int i=0; i < Model.Count; i++)
+    {
+       <div class="form-check">
+           <input type="hidden" asp-for="@Model[i].RoleID" />
+           <input type="hidden" asp-for="@Model[i].RoleName" />
+           <input type="checkbox" asp-for="@Model[i].RoleExist" class="form-check-input"/>
+           <label class="form-check-label" for="@Model[i].RoleExist">@Model[i].RoleName</label>
+
+
+       </div>
+    }
+
+    <button class="btn btn-primary">Rolleri Ata</button>
+</form>
